--- a/index.html
+++ b/index.html
@@ -238,6 +238,14 @@ footer { background:#040404; border-top:1px solid var(--border); padding:72px 8%
   .h-title{font-size:3rem} .stitle{font-size:2.4rem}
   .fg-grid{grid-template-columns:1fr}
 }
+
+/* FLOATING BOOK BUTTON */
+.cal-fab{position:fixed;bottom:32px;right:32px;z-index:9000;display:flex;align-items:center;gap:10px;background:var(--sky);color:var(--black);font-family:'Object Sans',sans-serif;font-size:.7rem;font-weight:700;letter-spacing:.14em;text-transform:uppercase;padding:14px 24px;border:none;cursor:pointer;box-shadow:0 8px 32px rgba(126,200,227,.35);transition:all .35s;overflow:hidden;}
+.cal-fab::before{content:'';position:absolute;inset:0;background:var(--gold);transform:scaleX(0);transform-origin:left;transition:transform .4s;}
+.cal-fab:hover{box-shadow:0 12px 40px rgba(126,200,227,.5);}
+.cal-fab:hover::before{transform:scaleX(1);}
+.cal-fab span,.cal-fab svg{position:relative;z-index:1;}
+@media(max-width:480px){.cal-fab{padding:12px 18px;font-size:.65rem;bottom:20px;right:20px;}}
 </style>
 </head>
 <body>
@@ -501,5 +509,13 @@ function toggleFaq(el){
   if(!isOpen) item.classList.add('open');
 }
 </script>
+
+<!-- CALENDLY -->
+<link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+<script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
+<button class="cal-fab" onclick="Calendly.initPopupWidget({url:'https://calendly.com/emiolaisraelayomide/new-meeting'});return false;">
+  <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><rect x="3" y="4" width="18" height="18" rx="2"/><line x1="16" y1="2" x2="16" y2="6"/><line x1="8" y1="2" x2="8" y2="6"/><line x1="3" y1="10" x2="21" y2="10"/></svg>
+  <span>Book a Call</span>
+</button>
 </body>
 </html>
