--- a/jacob-contact.html
+++ b/jacob-contact.html
@@ -97,6 +97,19 @@ footer{background:#040404;border-top:1px solid var(--border);padding:72px 8% 44p
 @media(max-width:1024px){.contact-hero{grid-template-columns:1fr;min-height:auto;}.ch-left{padding:100px 6% 60px;}.ch-right{padding:60px 6%;border-left:none;border-top:1px solid var(--border);}.faq-layout{grid-template-columns:1fr;}.faq-intro{position:static;}}
 @media(max-width:768px){.navul{display:none}.hbg{display:flex}.mmenu{display:flex}.frow{grid-template-columns:1fr}.intent-btns{grid-template-columns:1fr 1fr}.social-strip{justify-content:center}.fg-grid{grid-template-columns:1fr 1fr;gap:32px;}.av-grid{grid-template-columns:1fr;}}
 @media(max-width:480px){.fg-grid{grid-template-columns:1fr}.intent-btns{grid-template-columns:1fr 1fr}}
+
+/* FLOATING BOOK BUTTON */
+.cal-fab{position:fixed;bottom:32px;right:32px;z-index:9000;display:flex;align-items:center;gap:10px;background:var(--sky);color:var(--black);font-family:'Object Sans',sans-serif;font-size:.7rem;font-weight:700;letter-spacing:.14em;text-transform:uppercase;padding:14px 24px;border:none;cursor:pointer;box-shadow:0 8px 32px rgba(126,200,227,.35);transition:all .35s var(--ease);overflow:hidden;}
+.cal-fab::before{content:'';position:absolute;inset:0;background:var(--gold);transform:scaleX(0);transform-origin:left;transition:transform .4s var(--ease);}
+.cal-fab:hover{box-shadow:0 12px 40px rgba(126,200,227,.5);}
+.cal-fab:hover::before{transform:scaleX(1);}
+.cal-fab span,.cal-fab svg{position:relative;z-index:1;}
+@media(max-width:480px){.cal-fab{padding:12px 18px;font-size:.65rem;bottom:20px;right:20px;}}
+
+/* CALENDLY SIDE PANEL */
+.calendly-side{padding:60px 5% !important;}
+.calendly-side .form-header{margin-bottom:20px;}
+.calendly-inline-widget{border-radius:0;overflow:hidden;}
 </style>
 </head>
 <body>
@@ -160,62 +173,13 @@ footer{background:#040404;border-top:1px solid var(--border);padding:72px 8% 44p
     </div>
   </div>
 
-  <!-- RIGHT FORM -->
-  <div class="ch-right">
+  <!-- RIGHT — CALENDLY INLINE -->
+  <div class="ch-right calendly-side">
     <div class="form-header">
-      <h2>Send a Message</h2>
-      <p>Fill in the form and Jacob will respond within 2 business hours.</p>
+      <h2>Book a Consultation</h2>
+      <p>Choose a time that works for you — Jacob will confirm within the hour.</p>
     </div>
-
-    <div id="contactForm">
-      <div class="cform">
-        <div class="frow">
-          <div class="fg"><label>First Name</label><input type="text" placeholder="John"></div>
-          <div class="fg"><label>Last Name</label><input type="text" placeholder="Doe"></div>
-        </div>
-        <div class="frow">
-          <div class="fg"><label>Email</label><input type="email" placeholder="john@example.com"></div>
-          <div class="fg"><label>Phone</label><input type="tel" placeholder="(713) 000-0000"></div>
-        </div>
-        <div class="fg">
-          <label>I Am Looking To</label>
-          <div class="intent-btns">
-            <button class="intent-btn sel" onclick="selectIntent(this)">Buy a Home</button>
-            <button class="intent-btn" onclick="selectIntent(this)">Sell a Home</button>
-            <button class="intent-btn" onclick="selectIntent(this)">Invest</button>
-            <button class="intent-btn" onclick="selectIntent(this)">Relocate to Houston</button>
-          </div>
-        </div>
-        <div class="frow">
-          <div class="fg">
-            <label>Budget Range</label>
-            <select><option disabled selected>Select</option><option>Under $500K</option><option>$500K – $1M</option><option>$1M – $2M</option><option>$2M – $5M</option><option>$5M+</option></select>
-          </div>
-          <div class="fg">
-            <label>Preferred Neighborhood</label>
-            <select><option disabled selected>Select</option><option>River Oaks</option><option>The Heights</option><option>Montrose</option><option>Memorial</option><option>West University</option><option>Bellaire</option><option>Open to Suggestions</option></select>
-          </div>
-        </div>
-        <div class="fg">
-          <label>Timeline</label>
-          <select><option disabled selected>When are you looking to move?</option><option>As Soon As Possible</option><option>Within 3 Months</option><option>3 – 6 Months</option><option>6 – 12 Months</option><option>Just Exploring</option></select>
-        </div>
-        <div class="fg">
-          <label>Message</label>
-          <textarea rows="4" placeholder="Tell Jacob what you're looking for, any specific requirements, questions, or anything else..."></textarea>
-        </div>
-        <button class="fsub" onclick="submitForm()">
-          <span>Send Message</span>
-          <svg width="14" height="14" viewBox="0 0 16 16" fill="none"><path d="M3 8h10M9 4l4 4-4 4" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/></svg>
-        </button>
-      </div>
-    </div>
-
-    <div class="form-success" id="formSuccess">
-      <div class="fs-icon">✅</div>
-      <div class="fs-title">Message Sent!</div>
-      <p class="fs-text">Thank you for reaching out. Jacob will be in touch within 2 business hours to discuss your real estate goals.</p>
-    </div>
+    <div class="calendly-inline-widget" data-url="https://calendly.com/emiolaisraelayomide/new-meeting?hide_gdpr_banner=1&background_color=111111&text_color=fafaf8&primary_color=7ec8e3" style="min-width:280px;height:660px;"></div>
   </div>
 </section>
 
@@ -258,5 +222,15 @@ if(!isMobile&&cur){document.querySelectorAll('a,button').forEach(el=>{el.addEven
 const obs=new IntersectionObserver(entries=>entries.forEach(e=>{if(e.isIntersecting){e.target.classList.add('vis');obs.unobserve(e.target);}}),{threshold:.08,rootMargin:'0px 0px -40px 0px'});
 document.querySelectorAll('.sr').forEach(el=>obs.observe(el));
 </script>
+
+<!-- CALENDLY WIDGET SCRIPT -->
+<link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+<script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
+
+<!-- FLOATING BOOK BUTTON -->
+<button class="cal-fab" onclick="Calendly.initPopupWidget({url:'https://calendly.com/emiolaisraelayomide/new-meeting'});return false;">
+  <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><rect x="3" y="4" width="18" height="18" rx="2"/><line x1="16" y1="2" x2="16" y2="6"/><line x1="8" y1="2" x2="8" y2="6"/><line x1="3" y1="10" x2="21" y2="10"/></svg>
+  <span>Book a Call</span>
+</button>
 </body>
 </html>
