--- a/jacob-services.html
+++ b/jacob-services.html
@@ -149,6 +149,14 @@ footer{background:#040404;border-top:1px solid var(--border);padding:72px 8% 44p
 @media(max-width:1100px){.svc-item{grid-template-columns:60px 1fr;}.svc-detail{display:none;}.process-steps{grid-template-columns:1fr 1fr;}.commitment{grid-template-columns:1fr;}.commitment-accent,.commitment-badge{display:none;}.ph-cnt{grid-template-columns:1fr;}.ph-right-stat{display:none;}}
 @media(max-width:768px){.navul{display:none}.hbg{display:flex}.mmenu{display:flex}.svc-item{grid-template-columns:48px 1fr;}.svc-main{padding:32px 14px 32px 14px;}.areas-grid{grid-template-columns:1fr 1fr;}.tst-grid{grid-template-columns:1fr;}.process-header{grid-template-columns:1fr;}.process-steps{grid-template-columns:1fr 1fr;}.fg-grid{grid-template-columns:1fr 1fr;gap:32px;}.cta-band{flex-direction:column;}}
 @media(max-width:480px){.areas-grid{grid-template-columns:1fr;}.process-steps{grid-template-columns:1fr;}.fg-grid{grid-template-columns:1fr;}}
+
+/* FLOATING BOOK BUTTON */
+.cal-fab{position:fixed;bottom:32px;right:32px;z-index:9000;display:flex;align-items:center;gap:10px;background:var(--sky);color:var(--black);font-family:'Object Sans',sans-serif;font-size:.7rem;font-weight:700;letter-spacing:.14em;text-transform:uppercase;padding:14px 24px;border:none;cursor:pointer;box-shadow:0 8px 32px rgba(126,200,227,.35);transition:all .35s;overflow:hidden;}
+.cal-fab::before{content:'';position:absolute;inset:0;background:var(--gold);transform:scaleX(0);transform-origin:left;transition:transform .4s;}
+.cal-fab:hover{box-shadow:0 12px 40px rgba(126,200,227,.5);}
+.cal-fab:hover::before{transform:scaleX(1);}
+.cal-fab span,.cal-fab svg{position:relative;z-index:1;}
+@media(max-width:480px){.cal-fab{padding:12px 18px;font-size:.65rem;bottom:20px;right:20px;}}
 </style>
 </head>
 <body>
@@ -413,5 +421,13 @@ if(!isMobile&&cur){document.querySelectorAll('a,button').forEach(el=>{el.addEven
 const obs=new IntersectionObserver(entries=>entries.forEach(e=>{if(e.isIntersecting){e.target.classList.add('vis');obs.unobserve(e.target);}}),{threshold:.08,rootMargin:'0px 0px -40px 0px'});
 document.querySelectorAll('.sr').forEach(el=>obs.observe(el));
 </script>
+
+<!-- CALENDLY -->
+<link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+<script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
+<button class="cal-fab" onclick="Calendly.initPopupWidget({url:'https://calendly.com/emiolaisraelayomide/new-meeting'});return false;">
+  <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><rect x="3" y="4" width="18" height="18" rx="2"/><line x1="16" y1="2" x2="16" y2="6"/><line x1="8" y1="2" x2="8" y2="6"/><line x1="3" y1="10" x2="21" y2="10"/></svg>
+  <span>Book a Call</span>
+</button>
 </body>
 </html>
